--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "<package-name>",
+  "name": "subprocess-test-utils",
   "version": "1.0.0",
-  "description": "<package-description>",
+  "description": "Utility functions for testing subprocesses.",
   "main": "dist/index.js",
   "type": "commonjs",
   "types": "dist/index.d.ts",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PythonCoderAS/<package-name>.git"
+    "url": "git+https://github.com/PythonCoderAS/subprocess-test-utils.git"
   },
   "keywords": [],
   "author": "PythonCoderAS",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/PythonCoderAS/<package-name>/issues"
+    "url": "https://github.com/PythonCoderAS/subprocess-test-utils/issues"
   },
-  "homepage": "https://github.com/PythonCoderAS/<package-name>#readme",
+  "homepage": "https://github.com/PythonCoderAS/subprocess-test-utils#readme",
   "dependencies": {
   },
   "devDependencies": {
