--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "url": "https://github.com/PythonCoderAS/subprocess-test-utils/issues"
   },
   "homepage": "https://github.com/PythonCoderAS/subprocess-test-utils#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
