--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "url": "https://github.com/PythonCoderAS/subprocess-test-utils/issues"
   },
   "homepage": "https://github.com/PythonCoderAS/subprocess-test-utils#readme",
-  "dependencies": {},
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^9.1.1",
